[project]
name = "pyproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Cedric",email = "cebouhad@c4b5c6.42berlin.de"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
